# ros-smarthome

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  package.xml
include/: map_parser.hpp  map_parser.js  topic_util.hpp
launch/: alarm.launch  basic.launch
msg/: Device.msg  Devices.msg
src/: device_manager.cpp  gateway.js  simple_light.cpp
srv/: Execute.srv  Query.srv  Register.srv  Sync.srv
